<resources>
    <string name="app_name">Sidaus</string>
    <!--<string name="app_name">Sidaus Apps</string>-->
    <string name="action_settings">Settings</string>
    <string name="hint_username">Nama Pengguna</string>
    <string name="hint_pj">Penanggugn Jawab</string>
    <string name="hint_alamat">Alamat</string>
    <string name="hint_no_hp">Nomor HP / Telepon</string>
    <string name="hint_nama">Nama Usaha</string>
    <string name="hint_aduan">Isi Aduan</string>
    <string name="hint_jawaban">Jawaban Aduan</string>
    <string name="hint_password">Sandi</string>
    <string name="text_login">Masuk</string>
    <string name="text_register">Register</string>
    <string name="text_button_save">Simpan</string>
    <string name="text_foget_password">Forget Password ?</string>
    <string name="title_activity_tambah_usaha">TambahUsahaActivity</string>
    <string name="title_activity_ubah_usaha">UbahUsahaActivity</string>
    <string name="title_activity_desa_">Desa_Activity</string>
    <string name="title_activity_kecamatan_">Kecamatan_Activity</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="title_activity_aduan">AduanActivity</string>
    <string name="title_activity_get_ad_uan">GetAdUAN</string>
    <string name="title_activity_new_main">NewMain</string>
</resources>
