<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activity.NewMain"
    android:id="@+id/nstd_View"
    tools:showIn="@layout/activity_new_main">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--Jawaban Aduan-->
        <com.google.android.material.textfield.TextInputLayout
            android:visibility="invisible"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etJawaban"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:hint="@string/hint_jawaban"
                android:maxLines="1"
                android:inputType="text"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"/>
        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:padding="10dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--Nama-->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/hint_nama"
                    android:maxLines="1"
                    android:inputType="text"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!--Penanggung jawab-->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPj"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/hint_pj"
                    android:maxLines="1"
                    android:inputType="text"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!--Alamat-->

            <RelativeLayout
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:id="@+id/ln_map"
                android:padding="5dp">
                <fragment
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:id="@+id/mapss"/>

                <View
                    android:id="@+id/customViews"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent" />
            </RelativeLayout>


            <!--Alamat-->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etAlamat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/hint_alamat"
                    android:maxLines="1"
                    android:inputType="textNoSuggestions"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!--Kecamatan-->
            <Spinner
                android:id="@+id/spinnerKecamatan"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <!--Desa-->
            <Spinner
                android:id="@+id/spinnerDesa"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <!---->
            <Spinner
                android:id="@+id/spinnerJenisIzin"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <!--Isi Aduan-->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etIsi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/hint_aduan"
                    android:maxLines="1"
                    android:inputType="text"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:layout_marginTop="10dp"
                android:id="@+id/btnSimpan"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/text_button_save"
                android:textSize="18sp"/>

        </LinearLayout>
    </RelativeLayout>


</androidx.core.widget.NestedScrollView>