<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/parent"
    tools:context=".Activity.AduanActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <Spinner
            android:visibility="invisible"
            android:enabled="false"
            android:clickable="false"
            android:id="@+id/spinnerKecamatans"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <Spinner
            android:visibility="invisible"
            android:enabled="false"
            android:clickable="false"
            android:id="@+id/spinnerDesas"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <Spinner
            android:visibility="invisible"
            android:enabled="false"
            android:clickable="false"
            android:id="@+id/spinnerJenisIzins"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <LinearLayout
            android:padding="10dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--Penanggung jawab-->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPj"
                    android:enabled="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/hint_pj"
                    android:maxLines="1"
                    android:inputType="text"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!--Nama-->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNama"
                    android:enabled="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/hint_nama"
                    android:maxLines="1"
                    android:inputType="text"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!--Alamat-->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etAlamat"
                    android:enabled="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/hint_alamat"
                    android:maxLines="1"
                    android:inputType="text"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!--Isi Aduan-->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etIsi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/hint_aduan"
                    android:maxLines="1"
                    android:inputType="text"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!--Jawaban Aduan-->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etJawaban"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/hint_jawaban"
                    android:maxLines="1"
                    android:inputType="text"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"/>
            </com.google.android.material.textfield.TextInputLayout>


            <RelativeLayout
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:id="@+id/ln_map"
                android:padding="5dp">
                <fragment
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:id="@+id/maps"/>

                <View
                    android:id="@+id/customView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent" />
            </RelativeLayout>


            <com.google.android.material.button.MaterialButton
                android:layout_marginTop="10dp"
                android:id="@+id/btnSimpan"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/text_button_save"
                android:textSize="18sp"/>

        </LinearLayout>

    </RelativeLayout>



</ScrollView>